--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,31 +9,36 @@ body {
   background-color: var(--primary-white-color);
   margin: 0;
   padding: 0;
+  line-height: 1.5;
 }
 
 html {
   box-sizing: border-box;
-  /* margin: 0;
-  padding: 0; */
 }
 
-.gallery {
-  display: grid;
-  max-width: 1140px;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-auto-rows: 240px;
-  grid-gap: 12px;
+img {
+  display: block;
+  /* max-width: 100%;
+  height: auto; */
+}
+
+/* p {
+  margin: 0;
+} */
+
+/* .gallery {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  padding: 0;
-  list-style: none;
-  margin-left: auto;
-  margin-right: auto;
+  align-items: center;
 }
 
-.gallery__item {
+.photo-card {
+  flex-basis: calc((100% - 150px) / 5);
+  height: 240px;
+  transition: transform var(--animation-duration) var(--timing-function);
   position: relative;
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+  border: 1px solid black;
 }
 
 .gallery__image:hover {
@@ -44,17 +49,85 @@ html {
   height: 100%;
   width: 100%;
   object-fit: cover;
-  transition: transform var(--animation-duration) var(--timing-function);
 }
 
 .gallery__link {
-  display: block;
+  flex-basis: calc((100% - 150px) / 5);
+  margin-left: 15px;
+  margin-top: 30px;
+  margin-bottom: 50px;
   text-decoration: none;
-  height: 100%;
+  transition: transform var(--animation-duration) var(--timing-function);
 }
 
 .gallery__link:hover {
-  cursor: zoom-in;
+  transform: scale(1.1);
+}
+
+.info {
+  display: flex;
+  padding: 5px;
+  text-align: center;
+  background-color: #fff;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.info-item {
+  margin-left: 10px;
+  color: black;
+}
+
+.info-item:first-child {
+  margin-left: 0;
+}  */
+
+.gallery {
+  display: grid;
+  max-width: 1600px;
+  grid-template-columns: repeat(auto-fit, minmax(383px, 1fr));
+  grid-auto-rows: 280px;
+  grid-gap: 20px;
+  justify-content: center;
+  padding-top: 15px;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gallery__link {
+  position: relative;
+  text-decoration: none;
+  color: black;
+  transition: transform var(--animation-duration) var(--timing-function);
+}
+
+.gallery__link:hover {
+  transform: scale(0.95);
+}
+
+.card-image {
+  height: 210px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 15px;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.info-item {
+  box-sizing: border-box;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 /* ---------------------------------- */
@@ -66,7 +139,7 @@ html {
   padding-bottom: 10px;
   position: sticky;
   width: 100%;
-  /* top: 0; */
+  top: 0;
   z-index: 100;
   align-items: center;
 }
@@ -104,3 +177,67 @@ html {
 .search-btn:hover {
   background-color: #e3e4ff;
 }
+
+/* ================== */
+
+/* img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.form::after {
+  content: '';
+  clear: both;
+  display: table;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  width: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.form .search-form {
+  width: auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.form input {
+  width: 300px;
+  height: 42px;
+  padding-left: 15px;
+  border-radius: 42px;
+  border: 2px solid #324b4e;
+  background: #fff;
+  outline: none;
+  position: relative;
+  transition: 0.3s linear;
+}
+
+.form input:focus {
+  width: 350px;
+}
+
+.search-btn {
+  height: 42px;
+  width: 100px;
+  border-radius: 42px;
+  border: 2px solid #324b4e;
+  background: #fff;
+  outline: none;
+  cursor: pointer;
+  margin-left: 20px;
+}
+.search-btn:hover,
+.search-btn:focus {
+  background-color: rgb(219, 219, 219);
+} */
