--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,69 +18,7 @@ html {
 
 img {
   display: block;
-  /* max-width: 100%;
-  height: auto; */
 }
-
-/* p {
-  margin: 0;
-} */
-
-/* .gallery {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-
-.photo-card {
-  flex-basis: calc((100% - 150px) / 5);
-  height: 240px;
-  transition: transform var(--animation-duration) var(--timing-function);
-  position: relative;
-  border: 1px solid black;
-}
-
-.gallery__image:hover {
-  transform: scale(1.03);
-}
-
-.gallery__image {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-
-.gallery__link {
-  flex-basis: calc((100% - 150px) / 5);
-  margin-left: 15px;
-  margin-top: 30px;
-  margin-bottom: 50px;
-  text-decoration: none;
-  transition: transform var(--animation-duration) var(--timing-function);
-}
-
-.gallery__link:hover {
-  transform: scale(1.1);
-}
-
-.info {
-  display: flex;
-  padding: 5px;
-  text-align: center;
-  background-color: #fff;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-
-.info-item {
-  margin-left: 10px;
-  color: black;
-}
-
-.info-item:first-child {
-  margin-left: 0;
-}  */
 
 .gallery {
   display: grid;
@@ -104,6 +42,9 @@ img {
 
 .gallery__link:hover {
   transform: scale(0.95);
+  -webkit-box-shadow: 0px 8px 24px 13px rgba(0, 0, 0, 0.16);
+  -moz-box-shadow: 0px 8px 24px 13px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 8px 24px 13px rgba(0, 0, 0, 0.16);
 }
 
 .card-image {
@@ -121,6 +62,7 @@ img {
   border-right: 1px solid #eeeeee;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+  background-color: #fff;
 }
 
 .info-item {
@@ -154,7 +96,7 @@ img {
   border-top-right-radius: 0;
   border-bottom-left-radius: 0;
   border: none;
-  background: #ffffff;
+  background: #fff;
   outline: none;
   height: 25px;
   width: 300px;
@@ -178,66 +120,21 @@ img {
   background-color: #e3e4ff;
 }
 
-/* ================== */
+/* --------------------------- */
 
-/* img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-.form::after {
-  content: '';
-  clear: both;
-  display: table;
-}
-
-.form {
-  display: flex;
-  justify-content: center;
-  -webkit-backdrop-filter: blur(2px);
-  backdrop-filter: blur(2px);
-  position: fixed;
-  top: 0;
-  z-index: 100;
-  width: 100%;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.form .search-form {
-  width: auto;
-  align-items: center;
-  justify-content: center;
-}
-
-.form input {
-  width: 300px;
-  height: 42px;
-  padding-left: 15px;
-  border-radius: 42px;
-  border: 2px solid #324b4e;
-  background: #fff;
-  outline: none;
-  position: relative;
-  transition: 0.3s linear;
-}
-
-.form input:focus {
-  width: 350px;
-}
-
-.search-btn {
-  height: 42px;
-  width: 100px;
-  border-radius: 42px;
-  border: 2px solid #324b4e;
-  background: #fff;
-  outline: none;
+.load-more {
+  font-size: 20px;
+  width: 140px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  background-color: #3f57b3;
+  color: #fff;
   cursor: pointer;
-  margin-left: 20px;
+  text-align: center;
+  margin: 30px auto;
 }
-.search-btn:hover,
-.search-btn:focus {
-  background-color: rgb(219, 219, 219);
-} */
+
+.load-more:hover {
+  background-color: #122571;
+}
